force-app/main/default/objects/Contact/fields/CFA_Coach__c.field-meta.xml
<CustomField>
    <fullName>CFA_Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned fitness coach for this contact</description>
    <label>CFA Coach</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CFA Contacts</relationshipLabel>
    <relationshipName>CFA_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>