force-app/main/default/objects/Contact/fields/CFA_Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>CFA_Emergency_Contact_Name__c</fullName>
    <description>Name of emergency contact</description>
    <label>CFA Emergency Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>