force-app/main/default/objects/Contact/fields/CFA_Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>CFA_Emergency_Contact_Phone__c</fullName>
    <description>Phone number of emergency contact</description>
    <label>CFA Emergency Contact Phone</label>
    <type>Phone</type>
</CustomField>