force-app/main/default/objects/Contact/fields/CFA_Experience_Level__c.field-meta.xml
<CustomField>
    <fullName>CFA_Experience_Level__c</fullName>
    <description>Fitness experience level of the contact</description>
    <label>CFA Experience Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>