force-app/main/default/objects/Contact/fields/CFA_Fitness_Goals__c.field-meta.xml
<CustomField>
    <fullName>CFA_Fitness_Goals__c</fullName>
    <description>Primary fitness goals of the contact</description>
    <label>CFA Fitness Goals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weight Loss</fullName>
            </value>
            <value>
                <fullName>Muscle Gain</fullName>
            </value>
            <value>
                <fullName>General Fitness</fullName>
            </value>
            <value>
                <fullName>Sport Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>