force-app/main/default/objects/Contact/fields/CFA_Health_Conditions__c.field-meta.xml
<CustomField>
    <fullName>CFA_Health_Conditions__c</fullName>
    <description>Health conditions and medical information</description>
    <label>CFA Health Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>