force-app/main/default/objects/Contact/fields/CFA_Sports_Activity_Interests__c.field-meta.xml
<CustomField>
    <fullName>CFA_Sports_Activity_Interests__c</fullName>
    <description>Sports and activities the contact is interested in</description>
    <label>CFA Sports Activity Interests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>